--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,78 @@
 * {
 	padding: 0;
 	margin: 0;
+	scroll-behavior: smooth;
 }
 
 body{
 	width: 100%;
-	background-color: #525251;
+	height: auto;
+	background-color: #ffffff;
 	position: relative;
-	top: 60px
+	top: 80px
 }
 
-
+a:link, a:visited, a:active {
+    text-decoration:none;
+}
 /*------------------------INICIO BARRA ARRIBA-----------------*/
-.btncv {
-	float: right;
-	position: relative;
-	right: 20px;
-	top: 7px;
-	border: none;
-	cursor: pointer;
-	font-size: 20px;
-	padding: 10px 9px;
-	color: white;
-	border: 2px solid;
-	border-radius: 5px 5px 5px 5px;
-	background: linear-gradient(to right, transparent 50%, #bf7a29 50%) no-repeat left / 200%;
-	transition: background-position 0.3s ease;
-}
-
-.btncv:hover {
-	background-position: right;
-	color: white;
-	border: 2px solid white;
-}
-
 .barra {
-	background-color: rgb(46, 45, 45);
+	background-color: #c94b31;
 	position: fixed;
 	width: 100%;
 	top: 0;
 	z-index: 100;
+	height: 80px;
+}
+.menu{
+	display:inline;
+	padding-left:13px;
+	padding-right:13px;
+	position: relative;
+	bottom: 10px;
+	color: white;
+	font-family: 'Inter', sans-serif;
+	
+}
+.menu img{
 	height: 60px;
+	width: auto;
+	position: relative;
+	top: 20px;
 }
+/*------------------PRESENTACION--------------------*/
+.presentacion{
 
-/*------------------ACABA BARRA ARRIBA--------------------*/
-
-
-/*------------------CARRUSEL--------------------*/
-
-.izquierda {
+	width: auto;
+	height: 600px;
+}
+.presentacion h1{
+	text-align: center;
+	position: relative;
+	top: 50%;
+}
+.boton{
 	height: 40px;
 	width: 40px;
-	background-color: #bf7a29;
-	color: #fff;
+	transform: rotate(45deg);
+	margin: 0 auto;
 	position: relative;
-	bottom: 60px;
-	margin: 10px;
-	float: left;
-	border-radius: 100%;
+	top: 70%;
+	box-shadow: 2px 2px 0 0 #c94b31;
 }
 
-.derecha {
-	height: 40px;
-	width: 40px;
-	background-color: #bf7a29;
-	color: #fff;
-	position: relative;
-	bottom: 60px;
-	margin: 10px;
-	float: right;
-	outline: none;
-	border-radius: 100%;
-}
 
-/*------------------TRABAJOS--------------------*/
+
+
+/*------------------TRABAJOS(el height es la suma de las portadas +400)--------------*/
 
 .nosequeponer{
 	width: 100%;
-	height: 800px;
+	height: 918px;
 }
 /*------------------SIMPLE--------------------*/
 ul#trabajos {
-	width: 900px;
+	width: 1400px;
 	height: 100%;
 	margin: 0 auto;
 
@@ -90,8 +81,6 @@ ul#trabajos {
 li.ejemplos {
 	list-style: none;
 	float: left;
-	width: 300px;
-	height: 300px;
 }
 
 li.ejemplos:hover {
@@ -101,8 +90,9 @@ li.ejemplos:hover {
 
 #trabajos .ejemplos {
 	position: relative;
-	height: 300px;
-	width: 300px;
+	height:  517.5px;
+	width: 690px;
+	margin: 5px;
 	overflow: hidden;
 	box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
 }
@@ -120,7 +110,7 @@ li.ejemplos:hover {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.50);
+	background: #c94a319f;
 	;
 	transition: all 400ms ease-out;
 	opacity: 0;
@@ -134,7 +124,7 @@ li.ejemplos:hover {
 }
 
 #trabajos .ejemplos:hover>.capa h3 {
-	margin-top: 140px;
+	margin-top: 250px;
 	margin-bottom: 15px;
 }
 
@@ -152,14 +142,19 @@ li.ejemplos:hover {
 .footer {
 	width: 100%;
 	height: 200px;
-	background-color: rgb(46, 45, 45);
-	position: relative;
-	bottom: 0px;
+	background-color: #191919;
+	position:absolute; 
+	bottom:0; 
+	left:0; 
 }
 
 
 /*------------------TIPOS--------------------*/
-
+h1{
+	font-family: 'Inter', sans-serif;
+	color: #191919;
+	letter-spacing: 2px
+}
 h3 {
 	color: rgb(255, 255, 255);
 	font-family: 'Roboto Flex', sans-serif;
@@ -175,7 +170,7 @@ h2 {
 	margin-left: 40px;
 }
 
-
+/*------------------REDES--------------------*/
 .buttons {
 	text-align: center;
 }
@@ -198,7 +193,7 @@ h2 {
 
 .buttons a:hover {
 	transform: scale(1.2);
-	color: #bf7a29;
+	color: #c94b31;
 }
 
 
