--- a/css/style.css
+++ b/css/style.css
@@ -184,11 +184,12 @@ h2 {
 	height: 50px;
 	line-height: 50px;
 	text-align: center;
-	background: #314652;
+	background: #0c8cd6;
 	color: #f1f1f1;
 	border-radius: 50%;
 	box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
 	transition: all .4s ease-in-out;
+
 }
 
 .buttons a:hover {
