--- a/css/style.css
+++ b/css/style.css
@@ -34,16 +34,22 @@ a:link, a:visited, a:active {
 	font-family: 'Inter', sans-serif;
 	
 }
+
 .menu img{
 	height: 60px;
 	width: auto;
 	position: relative;
 	top: 20px;
+
 }
+
+
+
+
 /*------------------PRESENTACION--------------------*/
 .presentacion{
 
-	width: auto;
+	width: 100%;
 	height: 600px;
 }
 .presentacion h1{
@@ -155,400 +161,159 @@ h1{
 	color: #191919;
 	letter-spacing: 2px
 }
-h3 {
-	color: rgb(255, 255, 255);
-	font-family: 'Roboto Flex', sans-serif;
-}
 
-h2 {
-	float: left;
-	color: rgb(255, 255, 255);
-	font-family: 'Roboto Flex', sans-serif;
-	font-size: 25pt;
-	position: relative;
-	margin: 10px;
-	margin-left: 40px;
-}
 
 /*------------------REDES--------------------*/
-.buttons {
+
+
+.buttons{
+	position: relative;
+	top: 70px;
+	margin: 0 auto;
 	text-align: center;
 }
-
-.buttons a {
-	margin: 10px;
-	margin-top: 80px;
-	text-decoration: none;
-	font-size: 28px;
-	width: 50px;
-	height: 50px;
-	line-height: 50px;
-	text-align: center;
-	background: #0c8cd6;
-	color: #f1f1f1;
-	border-radius: 50%;
-	box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
-	transition: all .4s ease-in-out;
-
+.social{
+	height: 55px;
+	width: 55px;
+	display:inline-block;
+	margin: 5px;
+	border-radius: 100%;
 }
 
-.buttons a:hover {
-	transform: scale(1.2);
-	color: #c94b31;
-}
+img{
+	object-fit: cover;
+	width:100%;
+	height:100%;
+  }
 
+  .social:hover {
+	transform: scale(115%);
+	transition: all 0.2s ease;
+  }
+
+
+  @media (max-width:1430px){
+
+	
+	ul#trabajos {
+		width: 690px;
+		height: 100%;
+		margin: 0 auto;
+
+	}
+	
+	.nosequeponer{
+		width: 100%;
+		height: 1318px;
+	}
+
+}
+  
 
 @media (max-width:1030px){
 
 	
 	ul#trabajos {
-		width: 600px;
+		width: 690px;
 		height: 100%;
 		margin: 0 auto;
-	
 	}
 	
-	li.ejemplos {
-		list-style: none;
-		float: left;
-		width: 200px;
-		height: 200px;
-	}
-	
-	li.ejemplos:hover {
-		transform: scale(95%);
-		transition: 0.5s;
-	}
-	
-	#trabajos .ejemplos {
-		position: relative;
-		height: 200px;
-		width: 200px;
-		overflow: hidden;
-		box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
-	}
-	
-	#trabajos .ejemplos img {
+	.nosequeponer{
 		width: 100%;
-		height: 100%;
-		transition: all 400ms ease-out;
-		will-change: transform;
-	
+		height: 1318px;
 	}
-	
-	#trabajos .ejemplos .capa {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(0, 0, 0, 0.50);
-		;
-		transition: all 400ms ease-out;
-		opacity: 0;
-		visibility: hidden;
-		text-align: center;
-	}
-	
-	#trabajos .ejemplos:hover>.capa {
-		opacity: 1;
-		visibility: visible;
-	}
-	
-	#trabajos .ejemplos:hover>.capa h3 {
-		margin-top: 90px;
-		margin-bottom: 15px;
-	}
-	
-	#trabajos .ejemplos .capa h3 {
-		z-index: 10;
-		color: #fff;
-		font-weight: 400;
-		margin-bottom: 120px;
-		transition: all 400ms ease-out;
-		margin-top: 30px;
-	}
+
 }
 
 @media (max-width:720px){
 
 	
 	ul#trabajos {
-		width: 450px;
+		width: 580px;
 		height: 100%;
 		margin: 0 auto;
-	
 	}
-	
-	li.ejemplos {
-		list-style: none;
-		float: left;
-		width: 150px;
-		height: 150px;
+	.nosequeponer{
+		width: 100%;
+		height: 1218px;
 	}
-	
-	li.ejemplos:hover {
-		transform: scale(95%);
-		transition: 0.5s;
-	}
-	
+
 	#trabajos .ejemplos {
 		position: relative;
-		height: 150px;
-		width: 150px;
+		height:  435px;
+		width: 580px;
+		margin: 5px;
 		overflow: hidden;
 		box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
-	}
-	
-	#trabajos .ejemplos img {
-		width: 100%;
-		height: 100%;
-		transition: all 400ms ease-out;
-		will-change: transform;
-	
-	}
-	
-	#trabajos .ejemplos .capa {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(0, 0, 0, 0.50);
-		;
-		transition: all 400ms ease-out;
-		opacity: 0;
-		visibility: hidden;
-		text-align: center;
-	}
-	
-	#trabajos .ejemplos:hover>.capa {
-		opacity: 1;
-		visibility: visible;
-	}
-	
-	#trabajos .ejemplos:hover>.capa h3 {
-		margin-top: 90px;
-		margin-bottom: 15px;
-	}
-	
-	#trabajos .ejemplos .capa h3 {
-		z-index: 10;
-		color: #fff;
-		font-weight: 400;
-		margin-bottom: 120px;
-		transition: all 400ms ease-out;
-		margin-top: 30px;
 	}
 }
 
 
 @media (max-width:600px){
-	h2 {
-		float: left;
-		color: rgb(255, 255, 255);
-		font-family: 'Roboto Flex', sans-serif;
-		font-size: 18pt;
-		position: relative;
-		top: 6px;
-		margin: 10px;
-		margin-left: 40px;
-	}
 
+	
 	ul#trabajos {
-		width: 300px;
+		width: 430px;
 		height: 100%;
 		margin: 0 auto;
-	
+
 	}
-	
-	li.ejemplos {
-		list-style: none;
-		float: left;
-		width: 150px;
-		height: 150px;
+	.nosequeponer{
+		width: 100%;
+		height: 1020px;
 	}
-	
-	li.ejemplos:hover {
-		transform: scale(95%);
-		transition: 0.5s;
-	}
-	
+
 	#trabajos .ejemplos {
 		position: relative;
-		height: 150px;
-		width: 150px;
+		height:  322.5px;
+		width: 430px;
+		margin: 5px;
 		overflow: hidden;
 		box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
 	}
-	
-	#trabajos .ejemplos img {
-		width: 100%;
-		height: 100%;
-		transition: all 400ms ease-out;
-		will-change: transform;
-	
-	}
-	
-	#trabajos .ejemplos .capa {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(0, 0, 0, 0.50);
-		;
-		transition: all 400ms ease-out;
-		opacity: 0;
-		visibility: hidden;
-		text-align: center;
-	}
-	
-	#trabajos .ejemplos:hover>.capa {
-		opacity: 1;
-		visibility: visible;
-	}
-	
-	#trabajos .ejemplos:hover>.capa h3 {
-		margin-top: 90px;
-		margin-bottom: 15px;
-	}
-	
-	#trabajos .ejemplos .capa h3 {
-		z-index: 10;
-		color: #fff;
-		font-weight: 400;
-		margin-bottom: 120px;
-		transition: all 400ms ease-out;
-		margin-top: 30px;
-	}
-	
 }
 
 
 @media (max-width:420px){
-	.nosequeponer{
-		width: 100%;
-		height: 1300px;
-	}
-
-	.btncv {
-		float: right;
-		position: relative;
-		right: 10px;
-		top: 10px;
-		border: none;
-		cursor: pointer;
-		font-size: 15px;
-		padding: 10px 9px;
-		color: white;
-		border: 2px solid;
-		border-radius: 5px 5px 5px 5px;
-		background: linear-gradient(to right, transparent 50%, #bf7a29 50%) no-repeat left / 200%;
-		transition: background-position 0.3s ease;
-	}
-	
-	.btncv:hover {
-		background-position: right;
-		color: white;
-		border: 2px solid white;
-	}
-	h2 {
-		float: left;
-		color: rgb(255, 255, 255);
-		font-family: 'Roboto Flex', sans-serif;
-		font-size: 14pt;
-		position: relative;
-		top: 8px;
-		margin: 10px;
-		margin-left: 10px;
-	}
-
 	ul#trabajos {
-		width: 200px;
+		width: 350px;
 		height: 100%;
 		margin: 0 auto;
-	
 	}
-	
-	li.ejemplos {
-		list-style: none;
-		float: left;
-		width: 200px;
-		height: 200px;
+	.nosequeponer{
+		width: 100%;
+		height: 850px;
 	}
-	
-	li.ejemplos:hover {
-		transform: scale(95%);
-		transition: 0.5s;
-	}
-	
+
 	#trabajos .ejemplos {
 		position: relative;
-		height: 200px;
-		width: 200px;
+		height:  255px;
+		width: 340px;
+		margin: 5px;
 		overflow: hidden;
 		box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
 	}
-	
-	#trabajos .ejemplos img {
-		width: 100%;
-		height: 100%;
-		transition: all 400ms ease-out;
-		will-change: transform;
-	
-	}
-	
-	#trabajos .ejemplos .capa {
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(0, 0, 0, 0.50);
-		;
-		transition: all 400ms ease-out;
-		opacity: 0;
-		visibility: hidden;
+
+	.buttons{
+		position: relative;
+		top: 40px;
+		margin: 0 auto;
 		text-align: center;
 	}
-	
-	#trabajos .ejemplos:hover>.capa {
-		opacity: 1;
-		visibility: visible;
+
+
+	.menu{
+		visibility:hidden !important;
 	}
 	
-	#trabajos .ejemplos:hover>.capa h3 {
-		margin-top: 90px;
-		margin-bottom: 15px;
+	.menu img{
+		visibility:visible !important;
+
 	}
-	
-	#trabajos .ejemplos .capa h3 {
-		z-index: 10;
-		color: #fff;
-		font-weight: 400;
-		margin-bottom: 120px;
-		transition: all 400ms ease-out;
-		margin-top: 30px;
-	}
-	.izquierda {
-		height: 40px;
-		width: 40px;
-		background-color: #bf7a29;
-		color: #fff;
-		position: relative;
-		bottom: 0px;
-		margin: 10px;
-		float: left;
-		border-radius: 100%;
-	}
-	
-	.derecha {
-		height: 40px;
-		width: 40px;
-		background-color: #bf7a29;
-		color: #fff;
-		position: relative;
-		bottom: 0px;
-		margin: 10px;
-		float: right;
-		outline: none;
-		border-radius: 100%;
-	}
+
+
+
 }
+
+
